<resources>
    <string name="app_name">SafeApp</string>
    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="record">Record</string>
    <string name="stop">Stop</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="delete_phone">PHONE</string>

    <string name="delete_phone_gdrive">PHONE &amp; G-Drive</string>
    <string name="delete_message">Deleted Successfully</string>



    <!--shared preferences file key-->
    <string name="PREFERENCE_FILE_KEY_GOOGLE">com.example.himan.videotest.PREFERENCE_FILE_KEY</string>
    <!--shared preferences key-->
    <string name="App_Folder_Name">SafeApp</string>
    <string name="App_Folder_Drive_Id">SafeAppDriveId</string>
    <string name="Videos_Folder_Name">Videos</string>
    <string name="Video_Folder_Drive_Id">VideosDriveId</string>
    <string name="Audios_Folder_Name">Audios</string>
    <string name="Audio_Folder_Drive_Id">AudiosDriveId</string>

    <!--shared preference for sos settings-->
    <string name="sos_minutes">SosMinutes</string>
    <string name="sos_message">SosMessage</string>

    <!--settings key-->
    <string name="Video_Quality">VideoQuality</string>
    <string name="Audio_Quality">AudioQuality</string>
    <string name="Split_Frame">SplitFrame</string>
    <string name="record_setting">Record Settings</string>
    <string name="pref_video_title">Video Quality</string>
    <string name="pref_audio_title">Audio Quality</string>
    <string name="pref_split_title">Split Length</string>

    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>




    <string name="addPayment">Add Payment Method</string>
    <string name="paymentMethods">Payment Methods</string>
    <string name="endingIn">Card ending in </string>
    <string name="progressMessage">Creating Token&#8230;</string>
    <string name="validationErrors">Validation Errors</string>
    <string name="cardNumber">Card Number</string>
    <string name="amount">Amount</string>
    <string name="save">PAY</string>
    <string name="cvc">CVC</string>
    <string name="ok">OK</string>
    <string-array name="currency_array">
        <item>Currency (optional)- default cents</item>
        <item>cents</item>
        <item>USD</item>
    </string-array>


    <string name="hint_name">Full Name</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="sos_setting">SOS Settings</string>
    <string name="add_users">My People</string>
    <string name="sos_summary_message">edit your sos message</string>
    <string name="sos_default">please help</string>


    <string name="isIntro">isIntro</string>
</resources>
