<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >



    <PreferenceCategory android:title="@string/record_setting" >

        <ListPreference
            android:key="@string/Video_Quality"
            android:entries="@array/av_array"
            android:summary="%s"
            android:entryValues="@array/av_array"
            android:title="@string/pref_video_title"
            android:defaultValue="0"/>
        <ListPreference
            android:key="@string/Audio_Quality"
            android:entries="@array/av_array"
            android:summary="%s"
            android:entryValues="@array/av_array"
            android:title="@string/pref_audio_title"
            android:defaultValue="0"/>
        <ListPreference
            android:key="@string/Split_Frame"
            android:entries="@array/split_array"
            android:summary="%s"
            android:entryValues="@array/split_array_values"
            android:title="@string/pref_split_title"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/sos_setting">
        <Preference android:title="@string/add_users" >
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="com.example.himan.videotest"
                android:targetClass="com.example.himan.videotest.SosActivity"/>
        </Preference>
        <EditTextPreference android:title="@string/sos_message"
            android:key="@string/sos_message"
            android:defaultValue="@string/sos_default"
            android:summary="@string/sos_summary_message"
            ></EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>